Fix version info display